WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
43047
WebKitTestRunner waits forever if the web process crashes
https://bugs.webkit.org/show_bug.cgi?id=43047
Summary
WebKitTestRunner waits forever if the web process crashes
Adam Roben (:aroben)
Reported
2010-07-27 07:39:44 PDT
If the web process crashes while running a test, WebKitTestRunner waits forever. We should detect when the process crashes, print some failure message, and move on to the next test.
Attachments
Stop waiting for messages from the web process after a timeout elapses
(9.72 KB, patch)
2010-11-03 12:55 PDT
,
Adam Roben (:aroben)
no flags
Details
Formatted Diff
Diff
Updated to make timeouts configurable
(14.06 KB, patch)
2010-11-03 13:47 PDT
,
Adam Roben (:aroben)
andersca
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Adam Roben (:aroben)
Comment 1
2010-07-27 07:42:18 PDT
<
rdar://problem/8239456
>
Adam Roben (:aroben)
Comment 2
2010-08-17 06:48:31 PDT
The hang seems not to happen anymore, perhaps due to
r65267
.
Adam Roben (:aroben)
Comment 3
2010-08-27 13:48:43 PDT
Turns out this can still happen. One way I can make it reproduce: 1. Set a breakpoint in TestInvocation::invoke just before WKContextPostMessageToInjectedBundle is called 2. When the breakpoint is hit, kill the web process
Adam Roben (:aroben)
Comment 4
2010-08-27 13:49:13 PDT
Reopening due to the above.
Adam Roben (:aroben)
Comment 5
2010-11-03 12:55:18 PDT
Created
attachment 72852
[details]
Stop waiting for messages from the web process after a timeout elapses
Adam Roben (:aroben)
Comment 6
2010-11-03 13:47:48 PDT
Created
attachment 72865
[details]
Updated to make timeouts configurable
Adam Roben (:aroben)
Comment 7
2010-11-03 13:54:01 PDT
Committed
r71263
: <
http://trac.webkit.org/changeset/71263
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug