WebKitTools/WebKitTestRunner/qt/TestControllerQt.cpp
@@ -83,8 +83,9 @@ void TestController::platformInitialize()
 {
 }
 
-void TestController::runUntil(bool& done)
+void TestController::platformRunUntil(bool& done, double)
 {
+    // FIXME: Honor the timeout parameter <http://webkit.org/b/48941>.
     RunUntilConditionLoop::start(done);
     ASSERT(done);
 }
